--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 server/node_modules
 client/node_modules
-.vscode
+### VisualStudioCode ###
+./.vscode/*      # Maybe .vscode/**/* instead - see comments
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
