--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 server/node_modules
 client/node_modules
 ### VisualStudioCode ###
-./.vscode/*      # Maybe .vscode/**/* instead - see comments
+/.vscode/*      # Maybe .vscode/**/* instead - see comments
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
